--- a/app/views/orders/index.html.haml
+++ b/app/views/orders/index.html.haml
@@ -1,12 +1,15 @@
 %h2 Orders
 
-=form_tag(upload_orders_path, method: :post, multipart: true) do
-  =label_tag 'upload[file]', 'File'
-  %br
-  =file_field_tag 'upload[file]'
+.panel.panel-default
+  .panel-heading
+    %h3.panel-title Upload Orders
+  .panel-body
+    =form_tag(upload_orders_path, method: :post, multipart: true) do
+      =label_tag 'upload[file]', 'File'
+      =file_field_tag 'upload[file]'
 
-  .actions
-    =submit_tag 'Upload'
+      .actions
+        =submit_tag 'Upload', class: 'btn btn-default'
 
 %table.orders
   %tr
